--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,11 @@
 .indexbody{
     background-color: black;
     margin-top: 0%;
+    height: 100%;
+    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    size-adjust: 100%;
 }
 
 .form_filtre{
@@ -22,19 +27,21 @@
 }
 main{
     float:inline-start;
+    margin-top: 5%;
 }
 
 
 .indexGrid{
     display: grid;
     background-color:rgb(204, 204, 204);
+    height: 100%;
+    width: 100%;
 
 }
 .destinationGrid{
     background-color: rgb(204, 204, 204);
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 25% 25%;
     margin-left: 3%;
     margin-right: 3%;
     
