--- a/css/index.css
+++ b/css/index.css
@@ -6,12 +6,16 @@
     min-height: 100%;
     min-width: 100%;
     size-adjust: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
 }
 
 .form_filtre{
     background-color: white;
     width: 100%;
-    height: 10%;
+    height: 20%;
+    min-height: 10%;
+    min-width: 100%;
     margin: 0%;
     display: flex;
     flex-direction: row;
@@ -19,12 +23,7 @@
     align-items: center;
 }
 
-.form_filtre p{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: row;
-}
+
 main{
     float:inline-start;
     margin-top: 5%;
@@ -38,15 +37,7 @@ main{
     width: 100%;
 
 }
-.destinationGrid{
-    background-color: rgb(204, 204, 204);
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    margin-left: 3%;
-    margin-right: 3%;
-    
-    
-}
+
 
 aside{
     background-color: rgba(83, 71, 71, 0.308);
@@ -59,8 +50,8 @@ aside{
     justify-content: center;
 }
 .imageDestination{
-    height: 90%;
-    width: 90%;
+    max-height: 90%;
+    max-width: 90%;
     object-fit: scale-down;
     display: flex;
     align-items: center;
@@ -93,33 +84,104 @@ aside{
     align-items: center;
     justify-content: center;
 }
-.voyages p{
-    font-size: x-large;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bolder;
-    max-height: 20%;
-}
-.voyages h2{
-    text-decoration: underline;
-    font-size: 1em;
-    display: flex;
-    object-fit: scale-down;
-    align-items: center;
-    justify-content: center;
+@media screen and (min-width: 50em) {
+    .voyages p{
+        font-size: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bolder;
+        max-height: 20%;
+    }
 
+    .form_filtre p{
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: row;
+        font-size: 1em;
+        width: 100%;
+        height: 10%;
+    }
+
+    .destinationGrid{
+        background-color: rgb(204, 204, 204);
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        margin-left: 3%;
+        margin-right: 3%; 
+    }
+
+    .voyages h2{
+        text-decoration: underline;
+        font-size: 2rem;
+        display: flex;
+        object-fit: scale-down;
+        align-items: center;
+        justify-content: center;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    #prixMax{
+        width: 200px;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
 }
+
+@media screen and (max-width: 50em) {
+    .voyages p{
+        font-size: large;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bolder;
+        max-height: 20%;
+    }
+
+    .form_filtre p{
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: row;
+        font-size: 0.8em;
+        width: 100%;
+        height: 10%;
+    }
+
+    .destinationGrid{
+        background-color: rgb(204, 204, 204);
+        display: grid;
+        grid-template-columns: 50% 50%;
+        margin-left: 3%;
+        margin-right: 3%; 
+    }
+
+    .voyages h2{
+        text-decoration: underline;
+        font-size: 1rem;
+        display: flex;
+        object-fit: scale-down;
+        align-items: center;
+        justify-content: center;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    #prixMax{
+        width: 100px;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+}
+
+
 
 .voyages:hover {
     color: #FF4E19;
 }
 
-#prixMax{
-    width: 100px;
-    margin-left: 5%;
-    margin-right: 5%;
-}
 
 #demo{
     display: flex;
