--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ header{
     background-color: black;
     background-size: 100%;
     width: 100%;
-    height: 20%;
+    height: 30%;
     /*display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,7 +20,29 @@ header{
     justify-content: center;
 }
 
+@media screen and (min-width: 50em) {
+    #searchbar{
+        height: 25%;
+        width: 40%;
+        margin-left: 15%;
+        margin-right: 15%;
+        transition: transform .4s;
+    }
+    #searchbar:focus{
+        -ms-transform: scale(1.3); /* IE 9 */
+        -webkit-transform: scale(1.3); /* Safari 3-8 */
+        transform: scale(1.3);
+    }
+}
 
+@media screen and (max-width: 50em) {
+    #searchbar{
+        height: 25%;
+        width: 40%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
 .headerImage{
     height: 20%;
     width: 70%;
@@ -73,16 +95,3 @@ header a{
     text-align: center;
 }
 
-#searchbar{
-    height: 25%;
-    width: 40%;
-    margin-left: 15%;
-    margin-right: 15%;
-    transition: transform .4s;
-}
-
-#searchbar:focus{
-    -ms-transform: scale(1.3); /* IE 9 */
-    -webkit-transform: scale(1.3); /* Safari 3-8 */
-    transform: scale(1.3);
-}
