--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,12 @@ header{
         width: 40%;
         margin-left: 15%;
         margin-right: 15%;
+        transition: transform .4s;
+    }
+    #searchbar:focus{
+        -ms-transform: scale(1.3); /* IE 9 */
+        -webkit-transform: scale(1.3); /* Safari 3-8 */
+        transform: scale(1.3);
     }
 }
 
