--- a/css/reservation.css
+++ b/css/reservation.css
@@ -191,9 +191,10 @@ body{
 
     .imgetform img{
         transition: transform .4s;
-        height: 100%;
+        height: 90%;
         object-fit: scale-down;
-        width: 100%;
+        width: 90%;
+        margin: auto;
     }
     .imgetform img:hover{
         -ms-transform: scale(1.3); /* IE 9 */
