--- a/css/reservation.css
+++ b/css/reservation.css
@@ -33,13 +33,7 @@ body{
     justify-content: start;
 }
 
-#dest {
-    color: white;
-    background-color: rgb(83, 71, 71);
-    text-align: center;
-    font-size: xx-large;
-    margin: 0px;
-}
+
 
 #desc{
     background-color:rgb(204, 204, 204);
@@ -50,15 +44,7 @@ body{
     justify-content: start;
 }
 
-#desc h2{
-    background-color:rgb(83, 71, 71);
-    margin-top: 0%;
-    margin-bottom: 0%;
-    width: 100%;
-    text-align: center;
-    color: white;
 
-}
 
 @media screen and (min-width: 50em) {
     .description{
@@ -68,6 +54,36 @@ body{
         justify-content: space-between;
         height: 500px;
         width: 100%;
+    }
+
+    .description h2{
+        display: none;
+    }
+
+
+    #description_produit{
+        margin-left: 2%;
+        margin-right: 2%;
+        text-align: center;
+        font-size: 1rem;
+    }
+    
+    #dest {
+        color: white;
+        background-color: rgb(83, 71, 71);
+        text-align: center;
+        font-size: xx-large;
+        margin: 0px;
+    }
+
+    #desc h2{
+        background-color:rgb(83, 71, 71);
+        margin-top: 0%;
+        margin-bottom: 0%;
+        width: 100%;
+        text-align: center;
+        color: white;
+    
     }
 
     .img_block{
@@ -127,12 +143,26 @@ body{
     }
 
     #explication{
-        margin-left: 5%;
+        margin-left: 2%;
+        margin-right: 2%;
         width: 40%;
         text-align: center;
         background-color:rgb(167, 167, 167);
         border: 1px solid black;
         margin-top: 1%;
+    }
+
+    .blockdesc div h6{
+        text-align: center;
+        margin-left: 5%;
+        margin-right: 5%;
+        font-size: 0.7rem;
+    
+    }
+    .blockdesc div p{
+        font-size: 0.7rem;
+        margin: 5%;
+        text-align: center;
     }
 }
 
@@ -144,6 +174,24 @@ body{
         margin-top: 0%;
     }
 
+    #dest {
+        color: white;
+        background-color: rgb(83, 71, 71);
+        text-align: center;
+        font-size: 1.2rem;
+        margin: 0px;
+    }
+
+    #desc h2{
+        background-color:rgb(83, 71, 71);
+        margin-top: 0%;
+        margin-bottom: 0%;
+        width: 100%;
+        text-align: center;
+        color: white;
+        font-size: 1.2rem;
+    }
+
 
     .description h2{
         background-color: rgb(83, 71, 71);
@@ -152,11 +200,13 @@ body{
         width: 100%;
         text-align: center;
         color: white;
+        font-size: 1.2rem;
     }
     
     #description_produit{
         margin: 0%;
         text-align: center;
+        font-size: 1rem;
     }
 
     .img_block{
@@ -191,9 +241,9 @@ body{
 
     .imgetform img{
         transition: transform .4s;
-        height: 90%;
+        height: 80%;
         object-fit: scale-down;
-        width: 90%;
+        width: 80%;
         margin: auto;
     }
     .imgetform img:hover{
